[package]
name = "envenc"
version = "0.0.2"
edition = "2021"
description = "A crate for managing encrypted environment variables."
documentation = "https://docs.rs/envenc"
repository = "https://github.com/Stipulations/EnvEnc"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["encryption", "environment", "security", "dotenv"]

[dependencies]
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
dotenv = "0.15"
rand = "0.8.5"
aead = "0.5.2"
sha2 = "0.10.8"