[package]
name = "envenc"
version = "0.0.3"
edition = "2021"
description = "A crate for managing encrypted environment variables using either AES or ChaCha20Poly1305"
documentation = "https://docs.rs/envenc"
repository = "https://github.com/Stipulations/EnvEnc"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["encryption", "environment", "security", "dotenv", "chacha20poly1305"]

[dependencies]
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
dotenv = "0.15"
rand = "0.8.5"
aead = "0.5.2"
sha2 = "0.10.8"